# TankChallenge

./: .gitignore  LICENSE  README.md  masked_unity_ogm.npz  masked_unity_ogm_like_original.npz
data_log/test_1/: camera_image_raw.csv  enemy_state.csv  lidar_scan.csv  tank_state.csv
data_log/test_2/: camera_image_raw.csv  enemy_state.csv  tank_state.csv  test_2_lidar_scan.csv
data_log/test_3/: camera_image_raw.csv  enemy_state.csv  tank_state.csv  test_3_lidar_scan.csv
data_log/test_4/: camera_image_raw.csv  enemy_state.csv  tank_state.csv  test_4_lidar_scan.csv
src/map_path_plan/: package.xml  setup.cfg  setup.py
src/map_path_plan/launch/: map_path_plan.launch.py
src/map_path_plan/map_path_plan/: ch_point.py  interpolated_path_3d_flat_and_hills_whole.csv  ogm_loader.py  path_loader.py  ply_loader.py
src/sensor_tools/: package.xml  setup.cfg  setup.py
src/sensor_tools/launch/: run_monitor.launch.py
src/sensor_tools/sensor_tools/: sensor_monitor.py
src/tank_control/: package.xml  setup.py
src/tank_control/tank_control/: ballistic_computer.py  command_node.py  control_node.py  firing_tables.csv  pid_controller.py  speed_control_node.py  steering_control_node.py  steering_plan.py  turret_pitch_control_node.py  turret_yaw_control_node.py
src/tank_gui/: CMakeLists.txt  package.xml
src/tank_package/: package.xml  setup.cfg  setup.py
src/tank_package/tank_package/: __init__.py
src/tank_package/tank_package/common/: coord_utils.py  logger.py  param_file.py  qos.py
src/tank_package/tank_package/launch/: tank_system.launch.py
src/tank_package/tank_package/params/: bridge.yaml
src/tank_package/tank_package/sensor/: bridge_node.py  ffmpeg_camera_node.py
src/tank_package/tank_package/visualization/: __init__.py  rviz_publisher.py
src/tank_package_msg/: CMakeLists.txt  package.xml
src/tank_package_msg/msg/: BulletImpact.msg  EnemyState.msg  LidarPoint.msg  LidarScan.msg  Obstacle.msg  ObstacleArray.msg  TankState.msg
src/yolo_detector_pkg/: package.xml  setup.py
src/yolo_detector_pkg/launch/: yolo_detector.launch.py
(+2 files in other folders)
