<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tank_package</name>
  <version>0.1.0</version>
  <description>tank_package_main</description>
  <maintainer email="fun3545@gmail.com">strho</maintainer>
  <license>Apache-2.0</license>

  <!-- ★ build tool 선언 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임 · 빌드 의존 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tank_package_msg</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>requests</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- 테스트 의존 (선택) -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
